# FC-simulator

./: CMakeLists.txt  FC2.c  Gimbals_position.c  Gimbals_position.h  RC_Client.c  RC_Server.c  RC_controller.py  README.md  first_order_plant.c  first_order_plant.h  model.c  model.h  model_output.c  model_output.h  periodic.c  periodic.h  pid.c  pid.h  sensors.c  sensors.h  sh_mem.c  sh_mem.h  vis_logg.c  vis_logg.h  visuallization2.py
